--- a/app/views/digest/index.html.erb
+++ b/app/views/digest/index.html.erb
@@ -17,7 +17,7 @@
             <% end %>
           </table>
           <br />
-
+          <%= link_to 'All', @digests_url %>
         </ul>
       </div>
     </div>
