--- a/app/views/digest/index.html.erb
+++ b/app/views/digest/index.html.erb
@@ -6,23 +6,25 @@
       <div class="large-6 columns">
         <ul class="inline-list right">
 
-          <h1><%= @digest_name %> </h1>
+          <h1><%= digest_key %> </h1>
 
           <table border='1'>
             <tr>
-              <% @digest_manifest['identifier_descriptors'].each do |descriptor| %>
+              <% digest_identifier_descriptors.each do |descriptor| %>
                 <td><%= descriptor["digest_hash_key"].split('/').last%></td>
               <% end %>
               </td>
             </tr>
-            <% @digest_core_instances.each do |instance| %>
+
+            <% digest_core_instances.each do |instance| %>
                 <tr>
-                  <% @digest_manifest['identifier_descriptors'].each do |descriptor| %>
-                      <td><%= instance[descriptor["digest_hash_key"]][:identifier]%></td>
+                  <% digest_identifier_descriptors.each do |descriptor| %>
+                      <td><%= instance[descriptor["digest_hash_key"]][:identifier] %></td>
                   <% end %>
                   <td><%= link_to 'Core', 'l' %></td>
                  </tr>
             <% end %>
+
           </table>
           <br />
           <%= link_to 'All', @digests_url %>
