Big changes bu DigestController still not namespaced

--- a/app/views/layouts/digest-rails/application.html.erb
+++ b/app/views/layouts/digest-rails/application.html.erb
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<%= render("digest-rails/shared/navbar") %>
 
-    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
+<div class="container">
+  <%= render("digest-rails/shared/alerts") %>
+  <%= render("digest-rails/shared/page_header") %>
+  <%= render("digest-rails/shared/tabs") %>
+  <%= render("digest-rails/shared/tabs_content") %>
+  <%= render("digest-rails/shared/footer") %>
+  <br/>
+</div>
 
-    <%= stylesheet_link_tag    "digest-rails/application" %>
-    <%= javascript_include_tag "vendor/modernizr" %>
-    <%= javascript_include_tag "digest-rails/application", 'data-turbolinks-track' => true %>
-    <%= csrf_meta_tags %>
-  </head>
-
-  <body>
-
-    <%= yield %>
-
-  </body>
-</html>
+<% parent_layout "digest-rails/base" %>
