--- a/app/views/layouts/digest-rails/base.html.erb
+++ b/app/views/layouts/digest-rails/base.html.erb
@@ -16,12 +16,22 @@
   </title>
 
 </head>
+
 <body>
 <%= yield %>
 
 <%= javascript_tag do %>
     <% yield :digest_pane_javascript %>
 <% end %>
+
+<script>
+    <% @digests.each_index do |i| %>
+        <% digest =  @digests[i] %>
+        $( open_digest_<%= i  %> ).click(function( event ) {
+            window.location = "<%= digest.key.underscore %>"
+        });
+    <% end %>
+</script>
 
 </body>
 </html>
