--- a/app/views/digest-rails/shared/_tabs_content.html.erb
+++ b/app/views/digest-rails/shared/_tabs_content.html.erb
@@ -6,7 +6,7 @@
 
       <% digest = @digests[i] %>
 
-      <div class="content <%= active_class %>" id="panel<%= i %>">
+      <div class="content <%= active_class %>" id="digest_<%= i %>">
         <% if active %>
             <%= render("digest-rails/shared/tabs_content_active") %>
         <% else %>
