--- a/app/views/digest-rails/shared/_tabs_content_active.html.erb
+++ b/app/views/digest-rails/shared/_tabs_content_active.html.erb
@@ -1,3 +1,4 @@
-<div id="active_digest_header"> </div>
-<div id="active_digest_pane" class="handsontable"> </div>
-<div id="active_digest_footer"> </div>
+<%= yield :active_digest_header %>
+<%= yield :active_digest_pane %>
+<%= yield :active_digest_footer %>
+
