Views ready to plug in digests (again)

--- a/app/views/layouts/digest_rails/page/base.html.erb
+++ b/app/views/layouts/digest_rails/page/base.html.erb
@@ -37,10 +37,10 @@
 <% end %>
 
 <%= javascript_tag do %>
-    //$(function() {
+    $(function() {
     //console.log( "dom ready!" );
-    //    <%= yield :javascript %>
-    //});
+        <%= yield :javascript %>
+    });
 <% end %>
 
 <script>
