Intro of DigestSectionController

--- a/app/views/digest_rails/shared/_tabs_content_active.html.erb
+++ b/app/views/digest_rails/shared/_tabs_content_active.html.erb
@@ -1,4 +1,3 @@
-<%= yield :active_digest_header %>
-<%= yield :active_digest_pane %>
-<%= yield :active_digest_footer %>
-
+<div id="active_digest_header"></div>
+<div id="active_digest_pane"></div>
+<div id="active_digest_footer"></div>
