--- a/app/views/digest_rails/shared/_tabs_content_active.html.erb
+++ b/app/views/digest_rails/shared/_tabs_content_active.html.erb
@@ -1,3 +1,3 @@
-<div id="active_digest_header"></div>
-<div id="active_digest_pane"></div>
-<div id="active_digest_footer"></div>
+<div class="header"></div>
+<div class="pane"></div>
+<div class="footer"></div>
