Serviewer handles client-side except js

--- a/app/views/layouts/digest_rails/page/base.html.erb
+++ b/app/views/layouts/digest_rails/page/base.html.erb
@@ -2,10 +2,7 @@
 <html>
 <head>
   <%= stylesheet_link_tag("digest-rails/application", "data-turbolinks-track" => true) %>
-
-  <!--<X= #javascript_include_tag("digest-rails/application", "data-turbolinks-track" => true) X> -->
-
-
+  <%= javascript_include_tag("digest-rails/application", "data-turbolinks-track" => true) %>
 
   <%= yield(:head) %>
 
